--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,10 @@
+### Own entries
+
+# for testing online
+assets/out.json
+
+
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
