--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.profiles.active=hsqldb,jpa
 # ------------------------------------------------
 
 server.port=9966
-server.servlet.context-path=/friendofasaprosa/
+server.servlet.context-path=/pvh/
 
 spring.messages.basename=messages/messages
 
