--- a/frontend/.vscode/launch.json
+++ b/frontend/.vscode/launch.json
@@ -33,7 +33,8 @@
                 "program": "${workspaceFolder}/node_modules/nuxt/bin/nuxt.js"
             },
             "env": {
-                "API_URL": "https://api.reims2.duckdns.org/pvh/api/" // for AXIOS
+                "API_URL": "https://api.reims2.duckdns.org/pvh/api/", // for AXIOS
+                "DOCS_URL": "http://localhost:8080/"
             }
         }
     ],
