--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -1,16 +1,15 @@
-# uncomment for init database (first start)
-#spring.datasource.initialization-mode=always
-#spring.datasource.schema=classpath*:db/mysql/initDB.sql
-#spring.datasource.data=classpath*:db/mysql/populateDB.sql
-
 # MySQL config start
 #----------------------------------------------------------------
-spring.datasource.url = jdbc:mysql://localhost:3306/petclinic?useUnicode=true
-spring.datasource.username=pc
-spring.datasource.password=petclinic
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:${DATABASE_URL}
+# Username and password are included in database url environment variable
+#spring.datasource.username=
+#spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.schema=classpath*:db/mysql/initDB.sql
+spring.datasource.data=classpath*:db/mysql/populateDB.sql
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
 #----------------------------------------------------------------
 # MySQL config end 
