fix dokku, enable ufw, add swap

--- a/ansible/reims.yml
+++ b/ansible/reims.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: all
+  become: true
   roles:
     - dokku_bot.ansible_dokku
   vars:
@@ -7,6 +8,10 @@
     dokku_packages_state: latest
     dokku_vhost_enable: true
     dokku_mysql_db_name: "reims-db"
+    dokku_users:
+      - name: Github Actions
+        username: ci-deploy
+        ssh_key: "{{ lookup('file', 'creds/deploy_key.pub') }}"
     dokku_plugins:
       - name: clone
         url: https://github.com/crisward/dokku-clone.git
@@ -24,6 +29,7 @@
     - name: dokku apps:create docs
       dokku_app:
         app: docs
+
     - name: Create mysql
       dokku_service_create:
         name: "{{dokku_mysql_db_name}}"
@@ -31,19 +37,19 @@
     - name: Disable Mysql strict mode
       blockinfile:
         path: "/var/lib/dokku/services/mysql/{{dokku_mysql_db_name}}/config/disable_strict_mode.cnf"
+        create: "yes"
         block: |
           [mysqld]
           sql_mode=ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
     - name: Restart mysql to apply config
       shell: "dokku mysql:restart {{dokku_mysql_db_name}}"
-
-    - name: Link mysql to api
+    - name: Link database to api
       dokku_service_link:
         app: api
         name: "{{dokku_mysql_db_name}}"
         service: mysql
 
-    - name: Set variables for frontend
+    - name: Set multiple variables for frontend
       dokku_config:
         app: frontend
         config:
@@ -52,7 +58,7 @@
           API_URL: "http://api.web:5000/pvh/api/"
           DOCS_URL: "http://docs.web:5000/"
           HOST: "0.0.0.0"
-    - name: Set letsencrypt and port for api
+    - name: Set letsencrypt mail and port for api
       dokku_config:
         app: api
         config:
@@ -65,9 +71,9 @@
           PORT: "5000"
           HOST: "0.0.0.0"
 
-    - name: Create network configuration
+    - name: Create network configuration (all apps in one network)
       shell: |
-        dokku network:create reims
+        dokku network:create reims2
         dokku network:set frontend attach-post-deploy reims
         dokku network:set api attach-post-deploy reims
         dokku network:set docs attach-post-deploy reims
@@ -90,10 +96,6 @@
         app: frontend
         domains:
           - "{{ inventory_hostname }}"
-    - name: Clear docs domain
-      dokku_domains:
-        app: docs
-        state: clear
     - name: Disable docs proxy
       dokku_proxy:
         app: docs
@@ -104,3 +106,5 @@
     - name: Enable API letsencrypt
       dokku_letsencrypt:
         app: api
+    - name: Enable letsencrypt auto renew
+      shell: dokku letsencrypt:cron-job --add
