--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,9 +1,25 @@
-- name: Upgrade and install helpful packages
+- name: Print debug and add SSH keys
   hosts: all
-  become: true
   tasks:
     - name: Print ip address
       debug: var=ansible_default_ipv4.address
+    - name: Set authorized SSH pubkeys from file
+      authorized_key:
+        user: "{{ansible_user}}"
+        state: present
+        key: "{{ lookup('file', 'creds/pub_keys') }}"
+
+- name: Enable auto upgrade, enable swap and some helpful packages
+  hosts: all
+  become: true
+  roles:
+    - geerlingguy.swap
+    - role: jnv.unattended-upgrades
+      unattended_automatic_reboot_time: "06:00"
+      unattended_update_days: "{ 'Mo' }"
+  vars:
+    swap_file_size_mb: "2048" # some swap for more RAM during Dokku deploys
+  tasks:
     - name: Apt upgrade
       apt:
         upgrade: yes
@@ -16,33 +32,10 @@
           - nano
           - libpam-systemd # ssh session closed after reboot
         state: present
-    - name: Set authorized SSH pubkeys from file
-      authorized_key:
-        user: "{{ansible_user}}"
-        state: present
-        key: "{{ lookup('file', 'creds/pub_keys') }}"
-
-- name: Enable unattended updates
-  hosts: all
-  roles:
-    - role: jnv.unattended-upgrades
-      unattended_automatic_reboot_time: "03:00"
-      unattended_update_days: "{ 'Fr', 'Sa' }"
-
-- name: SSH hardening
-  hosts: all
-  vars:
-    ssh_permit_root_login: "yes"
-    sftp_enabled: true
-    ssh_print_motd: true
-    sftp_umask: "0022"
-  collections:
-    - devsec.hardening
-  roles:
-    - ssh_hardening
 
 - name: OS hardening
   hosts: all
+  become: true
   vars:
     sysctl_overwrite:
       # Enable IPv4 traffic forwarding.
@@ -56,10 +49,33 @@
     os_selinux_state: disabled
     os_auditd_enabled: false # lxd container
     os_auth_pam_passwdqc_enable: false # dont need strong PW policy
+    ssh_permit_root_login: "yes"
+    sftp_enabled: true
+    ssh_print_motd: true
+    ssh_print_pam_motd: true
+    sftp_umask: "0022"
   collections:
     - devsec.hardening
   roles:
-    - devsec.hardening.os_hardening
+    - os_hardening
+    - ssh_hardening
   post_tasks:
     - name: Reboot to apply sysctl params
       reboot:
+
+- name: Configure ufw
+  hosts: all
+  become: true
+  tasks:
+    - name: Allow ssh
+      community.general.ufw:
+        rule: allow
+        name: OpenSSH
+    - name: Allow nginx
+      community.general.ufw:
+        rule: allow
+        name: "Nginx Full"
+    - name: Enable UFW
+      community.general.ufw:
+        state: enabled
+        policy: deny
