--- a/ansible/reims.yml
+++ b/ansible/reims.yml
@@ -13,6 +13,9 @@
       - name: Github Actions
         username: ci-deploy
         ssh_key: "{{ lookup('file', 'creds/deploy_key.pub') }}"
+      - name: Local developer for debug
+        username: dev
+        ssh_key: "{{lookup('file', '~/.ssh/id_rsa.pub')}}"
     dokku_plugins:
       - name: clone
         url: https://github.com/crisward/dokku-clone.git
