Minor Security Changes ^

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 # When using Spring Data JPA, use: spring-data-jpa
 # ------------------------------------------------
 
-spring.profiles.active=mysql,jpa
+spring.profiles.active=hsqldb,jpa
 
 # ------------------------------------------------
 
@@ -33,4 +33,7 @@ logging.level.org.springframework=INFO
 
 # enable the desired authentication type
 # by default the authentication is disabled
-pvh.security.enable=false
+pvh.security.enable=true
+
+pvh.app.jwtSecret= pvhSecretKey
+pvh.app.jwtExpirationMs= 86400000
