--- a/frontend/.vscode/launch.json
+++ b/frontend/.vscode/launch.json
@@ -33,7 +33,7 @@
                 "program": "${workspaceFolder}/node_modules/nuxt/bin/nuxt.js"
             },
             "env": {
-                "API_URL": "https://reims2.app/api/", // for AXIOS
+                "API_URL": "https://reims2.app/api", // for AXIOS
                 "DOCS_URL": "http://localhost:8080/"
             }
         }
