--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,5 +35,7 @@ logging.level.org.springframework=INFO
 # by default the authentication is disabled
 pvh.security.enable=true
 
+# todo change me in production! what could go wrong here
 pvh.app.jwtSecret= pvhSecretKey
-pvh.app.jwtExpirationMs= 86400000
+# Expire after two weeks
+pvh.app.jwtExpirationMs=1209600000
