use external dump for intializing mariadb
automatically create schemes with hibernate
switch from mysql to mariadb

--- a/backend/src/main/resources/application-hsqldb.properties
+++ b/backend/src/main/resources/application-hsqldb.properties
@@ -2,14 +2,12 @@
 import org.springframework.samples.petclinic.repository.SpecialtyRepository;
 #----------------------------------------------------------------
 
-spring.datasource.schema=classpath*:db/hsqldb/initDB.sql
-spring.datasource.data=classpath*:db/hsqldb/populateDB.sql
-
 spring.datasource.url=jdbc:hsqldb:mem:petclinic
 spring.datasource.username=sa 
 spring.datasource.password=
 spring.jpa.database=HSQL
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+# create test database form import.sql
+spring.jpa.hibernate.ddl-auto=create-drop
 #----------------------------------------------------------------
 # HSQLDB config end
