--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -4,12 +4,10 @@ spring.datasource.url = jdbc:${DATABASE_URL}
 # Username and password are included in database url environment variable
 #spring.datasource.username=
 #spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database=MYSQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.schema=classpath*:db/mysql/initDB.sql
-spring.datasource.data=classpath*:db/mysql/populateDB.sql
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.initialization-mode=always
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+
+# automatically generate schema, put update it only (don't drop data)
+spring.jpa.hibernate.ddl-auto=update
 #----------------------------------------------------------------
 # MySQL config end 
