--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.messages.basename=messages/messages
 logging.level.org.springframework=INFO
 #logging.level.org.springframework=DEBUG
 
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # enable the desired authentication type
@@ -36,6 +36,6 @@ logging.level.org.springframework=INFO
 pvh.security.enable=true
 
 # todo change me in production! what could go wrong here
-pvh.app.jwtSecret= pvhSecretKey
+pvh.app.jwtSecret= pvhSecretKey 
 # Expire after two weeks
 pvh.app.jwtExpirationMs=1209600000
