add auth/user GET endpoint, remove moderator role

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,5 +37,5 @@ pvh.security.enable=true
 
 # todo change me in production! what could go wrong here
 pvh.app.jwtSecret= pvhSecretKey 
-# Expire after two weeks
-pvh.app.jwtExpirationMs=1209600000
+# Expire after four weeks
+pvh.app.jwtExpirationMs=2419200000
