--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.messages.basename=messages/messages
 logging.level.org.springframework=INFO
 #logging.level.org.springframework=DEBUG
 
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # enable the desired authentication type
