Autoformat all files for consistent style

--- a/backend/src/main/resources/application-hsqldb.properties
+++ b/backend/src/main/resources/application-hsqldb.properties
@@ -1,9 +1,9 @@
 # HSQLDB config startimport org.springframework.samples.petclinic.model.Specialty;
-import org.springframework.samples.petclinic.repository.SpecialtyRepository;
+import org.springframework.samples.petclinic.repository.SpecialtyRepository
 #----------------------------------------------------------------
 
 spring.datasource.url=jdbc:hsqldb:mem:petclinic
-spring.datasource.username=sa 
+spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database=HSQL
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
