improve finding with filters by using specifications
and fix input field validation from last commit

--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Launch PVHApplication",
             "request": "launch",
             "mainClass": "org.PVH.PVHApplication",
-            "projectName": "spring-petclinic-rest"
+            "projectName": "spring-pvh-rest"
         }
     ]
 }
