--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,7 +35,6 @@ logging.level.org.springframework=INFO
 # by default the authentication is disabled
 pvh.security.enable=true
 
-# todo change me in production! what could go wrong here
-pvh.app.jwtSecret= pvhSecretKey 
+pvh.app.jwtSecret=${PVH_JWT_SECRET}
 # Expire after four weeks
 pvh.app.jwtExpirationMs=2419200000
