--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest-extended": "^1.2.0",
-    "ts-jest": "^27.1.2"
+    "ts-jest": "^27.1.2",
+    "typescript": "4.4.4"
   }
 }
