--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,10 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "jest": "^27.4.7",
     "jest-extended": "^1.2.0",
     "ts-jest": "^27.1.2",
+    "ts-loader": "^8.1.0",
     "typescript": "4.4.4"
   }
 }
