--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,39 +12,39 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.1.0",
-    "@nuxtjs/auth-next": "5.0.0-1640716105.da0587d",
+    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "chroma-js": "2.1.2",
+    "chroma-js": "2.4.2",
     "core-js": "^3.20.1",
     "nuxt": "^2.15.8",
     "vue-shortkey": "^3.1.7",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@mdi/js": "^6.5.95",
+    "@mdi/js": "^7.0.96",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/google-fonts": "^3.0.0-0",
     "@nuxtjs/vuetify": "^1.12.3",
     "@types/chroma-js": "^2.1.3",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^28.1.6",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.21.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "jest": "^27.4.7",
-    "jest-extended": "^1.2.0",
-    "ts-jest": "^27.1.2",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "jest": "^28.1.3",
+    "jest-extended": "^3.0.2",
+    "ts-jest": "^28.0.7",
     "ts-loader": "^8.1.0",
-    "typescript": "4.4.4"
+    "typescript": "4.7.4"
   }
 }
