--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
       "ESNext.AsyncIterable",
       "DOM"
     ],
+    "jsx": "preserve",
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
@@ -31,6 +32,10 @@
       "@nuxtjs/auth-next",
       "@nuxtjs/vuetify"
     ]
+  },
+  "vueCompilerOptions": {
+    "target": 2.7,
+    // "target": 2, // For Vue version <= 2.6.14
   },
   "exclude": [
     "node_modules",
