--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "chroma-js": "2.4.2",
     "core-js": "^3.25.0",
     "nuxt": "^2.15.8",
+    "nuxt-route-meta": "^2.3.5",
     "vue-shortkey": "^3.1.7",
     "vuex-persistedstate": "^4.1.0"
   },
