--- a/ansible/dump.sql.example
+++ b/ansible/dump.sql.example
@@ -1,11 +1,138 @@
-INSERT INTO roles (id, name) VALUES(1, 'ROLE_USER');
-INSERT INTO roles (id, name) VALUES(2, 'ROLE_ADMIN');
 
--- init with username initial and password testtest
-INSERT INTO users (password, username) VALUES('$2a$10$vpFqQIbEm0Zd0eco2hLxgOTiujxoziOGvKgbX6KE1ud8hwdHJXsE2', 'initial');
+DROP TABLE IF EXISTS `dispense`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `dispense` (
+  `id` bigint(20) NOT NULL AUTO_INCREMENT,
+  `modify_date` datetime(6) DEFAULT NULL,
+  `previous_sku` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=9981 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+/*!40101 SET character_set_client = @saved_cs_client */;
 
-INSERT INTO user_roles (user_id, role_id) VALUES(1, 1);
-INSERT INTO user_roles (user_id, role_id) VALUES(1, 2);
+
+--
+-- Table structure for table `eye`
+--
+
+DROP TABLE IF EXISTS `eye`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `eye` (
+  `id` bigint(20) NOT NULL AUTO_INCREMENT,
+  `additional` float DEFAULT NULL,
+  `axis` int(11) DEFAULT NULL,
+  `cylinder` float DEFAULT NULL,
+  `sphere` float DEFAULT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=19961 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Table structure for table `glasses`
+--
+
+DROP TABLE IF EXISTS `glasses`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `glasses` (
+  `id` bigint(20) NOT NULL AUTO_INCREMENT,
+  `appearance` varchar(255) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
+  `creation_date` datetime(6) DEFAULT NULL,
+  `dispensed` bit(1) DEFAULT NULL,
+  `glasses_size` varchar(255) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
+  `glasses_type` varchar(255) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
+  `location` varchar(255) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
+  `sku` int(11) DEFAULT NULL,
+  `dispense_id` bigint(20) DEFAULT NULL,
+  `od_id` bigint(20) DEFAULT NULL,
+  `os_id` bigint(20) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  KEY `FKn7g5jsbuiwnmpeh90i89y4gv0` (`dispense_id`),
+  KEY `FKovw8a7k5pow8in36qh2k3t0ja` (`od_id`),
+  KEY `FKnnd7mfxvhrbjwv8p5xiswnai8` (`os_id`),
+  CONSTRAINT `FKn7g5jsbuiwnmpeh90i89y4gv0` FOREIGN KEY (`dispense_id`) REFERENCES `dispense` (`id`),
+  CONSTRAINT `FKnnd7mfxvhrbjwv8p5xiswnai8` FOREIGN KEY (`os_id`) REFERENCES `eye` (`id`),
+  CONSTRAINT `FKovw8a7k5pow8in36qh2k3t0ja` FOREIGN KEY (`od_id`) REFERENCES `eye` (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=9981 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Table structure for table `roles`
+--
+
+DROP TABLE IF EXISTS `roles`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `roles` (
+  `id` int(11) NOT NULL AUTO_INCREMENT,
+  `name` varchar(20) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=4 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Dumping data for table `roles`
+--
+
+LOCK TABLES `roles` WRITE;
+/*!40000 ALTER TABLE `roles` DISABLE KEYS */;
+INSERT INTO `roles` VALUES (1,'ROLE_USER'),(2,'ROLE_ADMIN');
+/*!40000 ALTER TABLE `roles` ENABLE KEYS */;
+UNLOCK TABLES;
+
+--
+-- Table structure for table `user_roles`
+--
+
+DROP TABLE IF EXISTS `user_roles`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `user_roles` (
+  `user_id` bigint(20) NOT NULL,
+  `role_id` int(11) NOT NULL,
+  PRIMARY KEY (`user_id`,`role_id`),
+  KEY `FKh8ciramu9cc9q3qcqiv4ue8a6` (`role_id`),
+  CONSTRAINT `FKh8ciramu9cc9q3qcqiv4ue8a6` FOREIGN KEY (`role_id`) REFERENCES `roles` (`id`),
+  CONSTRAINT `FKhfh9dx7w3ubf1co1vdev94g3f` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Dumping data for table `user_roles`
+--
+
+LOCK TABLES `user_roles` WRITE;
+/*!40000 ALTER TABLE `user_roles` DISABLE KEYS */;
+INSERT INTO `user_roles` VALUES (1,1),(1,2),(3,1),(4,1);
+/*!40000 ALTER TABLE `user_roles` ENABLE KEYS */;
+UNLOCK TABLES;
+
+--
+-- Table structure for table `users`
+--
+
+DROP TABLE IF EXISTS `users`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `users` (
+  `id` bigint(20) NOT NULL AUTO_INCREMENT,
+  `password` varchar(120) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
+  `username` varchar(20) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  UNIQUE KEY `UKr43af9ap4edm43mmtq01oddj6` (`username`)
+) ENGINE=InnoDB AUTO_INCREMENT=5 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Dumping data for table `users`
+--
+
+LOCK TABLES `users` WRITE;
+/*!40000 ALTER TABLE `users` DISABLE KEYS */;
+INSERT INTO `users` VALUES (1,'$2a$10$vpFqQIbEm0Zd0eco2hLxgOTiujxoziOGvKgbX6KE1ud8hwdHJXsE2','test'),(3,'$2a$10$JOcqFd2IfPwPAs1heSxGPuKqZ9RMJfjHJGNScyXia4VlDWgYmfy3S','test2'),(4,'$2a$10$SDMYgQ9Vd8MdV3OvPxwwcONMzDsvSfzQRK9ZDBFrYJjpsX6wDIZJW','thomas');
+/*!40000 ALTER TABLE `users` ENABLE KEYS */;
+UNLOCK TABLES;
 
 
 DELETE FROM glasses;
