Also export all glasses as CSV

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -36,5 +36,5 @@ logging.level.org.springframework=INFO
 pvh.security.enable=true
 
 pvh.app.jwtSecret=${PVH_JWT_SECRET}
-# Expire after four weeks
-pvh.app.jwtExpirationMs=2419200000
+# Expire after 8 weeks
+pvh.app.jwtExpirationMs=4838400000
