--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,10 +33,9 @@ logging.level.org.springframework=INFO
 
 # enable the desired authentication type
 # by default the authentication is disabled
-pvh.security.enable=false
+pvh.security.enable=true
 
-pvh.app.jwtSecret=fdgsfg
+pvh.app.jwtSecret=${PVH_JWT_SECRET}
 # Expire after 8 weeks
 pvh.app.jwtExpirationMs=4838400000
-# If enable = true -> more debug messages in response
 pvh.debug.enable = true
