--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,9 +33,9 @@ logging.level.org.springframework=INFO
 
 # enable the desired authentication type
 # by default the authentication is disabled
-pvh.security.enable=true
+pvh.security.enable=false
 
-pvh.app.jwtSecret=${PVH_JWT_SECRET}
+pvh.app.jwtSecret=ggg
 # Expire after 8 weeks
 pvh.app.jwtExpirationMs=4838400000
 pvh.debug.enable = true
