--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -7,7 +7,7 @@
     <version>2.4.2</version>
 
     <description>REST Backend of PVH</description>
-    <url>https://https://reims2.app/</url>
+    <url>https://reims2.app/</url>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
