--- a/frontend/.github/workflows/ci.yml
+++ b/frontend/.github/workflows/ci.yml
@@ -4,11 +4,8 @@ on:
   push:
     branches:
       - main
-      - master
+      - dev
   pull_request:
-    branches:
-      - main
-      - master
 
 jobs:
   ci:
