new exception for when database is full - set min SKU for SM to 5001 (was 5000) - print error message in prod - disable debug logging

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,4 +38,5 @@ pvh.security.enable=true
 pvh.app.jwtSecret=${PVH_JWT_SECRET}
 # Expire after 8 weeks
 pvh.app.jwtExpirationMs=4838400000
-pvh.debug.enable = true
+# enable debug logging via PVH_DEBUG env var, defaults to false
+pvh.debug.enable =${PVH_DEBUG:false}
