fix dev concurrency

--- a/backend/.github/workflows/deploy-dev.yml
+++ b/backend/.github/workflows/deploy-dev.yml
@@ -8,7 +8,7 @@ on:
 env:
   REMOTE_HOST: "ssh://dokku@reims2.app"
 
-concurrency: deploy-api
+concurrency: deploy-api-dev
 
 jobs:
   deploy-dev-api:
